update the GUI and the example figure

--- a/buckinghampy-gui.ipynb
+++ b/buckinghampy-gui.ipynb
@@ -4,16 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Buckingham $\\pi$:  Dimensional Analysis\n",
-    "**Mokbel Karam, and Prof. Tony Saad (<a href='www.tsaad.net'>www.tsaad.net</a>) <br/>Department of Chemical Engineering <br/>University of Utah**\n",
+    "# BuckinghamPy:  A Software for Dimensional Analysis\n",
+    "**Mokbel Karam and Tony Saad (<a href='www.tsaad.net'>www.tsaad.net</a>) <br/>Department of Chemical Engineering <br/>University of Utah**\n",
     "<hr/>\n",
-    "This notebook represents the graphical user interface of `BuckinghamPy`.\n",
-    "\n",
-    "In the following image we represent how to obtain the sets of dimensionless groups for the example of Pressure Drop in a Pipe using the GUI\n",
-    "\n",
-    "![Latex Rendered Results](doc/Gui-example.png)\n",
-    "\n",
-    "Run the cell below to lunch the GUI application "
+    "This notebook represents the graphical user interface of `BuckinghamPy`: <a href='http://www.github.com/saadgroup/buckinghampy'>www.github.com/saadgroup/buckinghampy</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Execute the cell below to lunch the GUI application (shift + enter)"
    ]
   },
   {
@@ -26,12 +27,40 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6338da514e074d119c1a4e108f336944",
+       "model_id": "975dd7e523344f1095238b23efb6ea70",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(BoundedIntText(value=0, continuous_update=True, description='Number of Variables:', style=Descr…"
+       "HBox(children=(BoundedIntText(value=5, continuous_update=True, description='Number of Variables:', style=Descr…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3c626da9f0ee4f8894ebaf51c6d4e108",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Box(children=(Textarea(value='', description='Name:', layout=Layout(height='32px', width='auto'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f78f93512e704452a1cfe5fb26212552",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
       ]
      },
      "metadata": {},
@@ -51,6 +80,15 @@
    "source": [
     "# Example 1: Pressure Drop in Pipe\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the following image we represent how to obtain the sets of dimensionless groups for the example of Pressure Drop in a Pipe using the GUI\n",
+    "\n",
+    "![Latex Rendered Results](doc/Gui-example.png)"
    ]
   },
   {
@@ -169,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   },
   "toc": {
    "colors": {
